Reworked plugins: Plugin now associated with .xpl file. Added X-IvAp recognition