@@ -3,22 +3,26 @@ package com.ogerardin.xplane.plugins;
 import com.ogerardin.xplane.Manager;
 import com.ogerardin.xplane.ManagerEvent;
 import com.ogerardin.xplane.XPlane;
+import com.ogerardin.xplane.util.FileUtils;
 import com.ogerardin.xplane.util.IntrospectionHelper;
+import com.ogerardin.xplane.util.Maps;
+import com.ogerardin.xplane.util.platform.LinuxPlatform;
+import com.ogerardin.xplane.util.platform.MacPlatform;
+import com.ogerardin.xplane.util.platform.Platform;
+import com.ogerardin.xplane.util.platform.WindowsPlatform;
 import lombok.Getter;
 import lombok.NonNull;
+import lombok.SneakyThrows;
 import lombok.Synchronized;
 import lombok.extern.slf4j.Slf4j;
 
-import java.io.IOException;
-import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Slf4j
 public class PluginManager extends Manager<Plugin> {
@@ -28,6 +32,14 @@ public class PluginManager extends Manager<Plugin> {
     private final Path pluginsFolder;
 
     private  List<Plugin> plugins = null;
+
+    private static final Map<String, Class<? extends Platform>> PLAFORM_PLUGIN_MAP = Maps.mapOf(
+            "mac.xpl", MacPlatform.class,
+            "win.xpl", WindowsPlatform.class,
+            "lin.xpl", LinuxPlatform.class
+    );
+
+
 
     public PluginManager(@NonNull XPlane xPlane, @NonNull Path pluginsFolder) {
         super(xPlane);
@@ -51,31 +63,33 @@ public class PluginManager extends Manager<Plugin> {
     }
 
 
+    @SneakyThrows
     @Synchronized
     private void loadPlugins()  {
 
         log.info("Loading plugins...");
         fireEvent(new ManagerEvent.Loading<>());
 
-        try (Stream<Path> pathStream = Files.list(pluginsFolder)) {
-            plugins = pathStream
-                    .filter(Files::isDirectory)
-                    .map(this::maybeGetPlugin)
-                    .filter(Optional::isPresent)
-                    .map(Optional::get)
-                    .collect(Collectors.toList());
-        } catch (IOException e) {
-            log.error("Plugin folder not found: {}", pluginsFolder);
-            plugins = Collections.emptyList();
-        }
+        this.plugins = FileUtils.findFiles(pluginsFolder, path -> path.getFileName().toString().endsWith(".xpl")).stream()
+                .filter(this::isNotUnwantedPlatform)
+                .map(this::maybeGetPlugin)
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .toList();
 
-        log.info("Loaded {} plugins", plugins.size());
-        fireEvent(new ManagerEvent.Loaded<>(plugins));
+        log.info("Loaded {} plugins", this.plugins.size());
+        fireEvent(new ManagerEvent.Loaded<>(this.plugins));
     }
 
-    private Optional<Plugin> maybeGetPlugin(Path path) {
+    private boolean isNotUnwantedPlatform(Path xplFile) {
+        String filename = xplFile.getFileName().toString();
+        Class<? extends Platform> pluginPlatform = PLAFORM_PLUGIN_MAP.get(filename);
+        return (pluginPlatform == null) || (pluginPlatform == MacPlatform.class);
+    }
+
+    private Optional<Plugin> maybeGetPlugin(Path xplFile) {
         try {
-            final Plugin plugin = IntrospectionHelper.getBestSubclassInstance(Plugin.class, path);
+            final Plugin plugin = IntrospectionHelper.getBestSubclassInstance(Plugin.class, xplFile);
             return Optional.of(plugin);
         } catch (InstantiationException e) {
             return Optional.empty();
